# BanjOS

./: .gdb_history  .gdbinit  .gitignore  CMakeLists.txt  Makefile  README.md  mkimg.sh  x86_64_elf_toolchain.cmake
data/: isr_handler_template.asm  keycodes.csv  keycodes.tsv
include/: alignment.h  allocator.h  block_device.h  exit.h  ext2.h  fs.h  gdt.h  global.h  keycodes.h  mbr.h  md5.h  multiboot_tags.h  page_allocator.h  page_table.h  portio.h  processes.h  ps2.h  ring_buffer.h  serial.h  smolassert.h  vfs.h  vga.h
res/: fish1.txt  fish2.txt
res/boot/grub/: grub.cfg
src/: CMakeLists.txt  allocator.c  block_device.c  boot.asm  ext2.c  fs.c  gdt.c  gdt.h  interrupts.c  interrupts.h  isr_handler.asm  keycodes.c  keycodes.h  kmain.c  long_mode_init.asm  mbr.c  md5.c  multiboot_tags.c  page_allocator.c  page_table.c  portio.h  printk.c  printk.h  processes.c  ps2.c  ps2.h  ring_buffer.c  serial.c  snakes.c  string.c  vga.c  vga.h
tools/: generate_handler_stubs.py  generate_keymap.py  kerncpy.sh  mkimg.sh
